fix anoying scrollbar (even though it sould not be there)

--- a/beacon-ui/app/assets/main.css
+++ b/beacon-ui/app/assets/main.css
@@ -146,9 +146,14 @@ md-card-content ul li {
 }
 
 #beaconLogin {
-	position: absolute;
-	right: 10px;
-	top: 0;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+}
+
+#beaconLogin a:last-child {
+  margin-left: auto;
+	margin-right: 10px;
 }
 
 #beaconLogin img {
